--- a/admin/index.html
+++ b/admin/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Marketer UX – Admin</title>
   <link rel="stylesheet" href="style.css" />
-  
 </head>
+
 <body>
   <header class="navbar">
     <div class="logo">Marketer <span>UX</span></div>
@@ -14,6 +14,12 @@
 
   <main class="container">
     <h1>Google Reviews Script Generator</h1>
+
+    <p class="helper">
+      You can find the Place ID of any business here:
+      <a href="https://developers.google.com/maps/documentation/places/web-service/place-id"
+         target="_blank">Google Place ID Finder</a>
+    </p>
 
     <label class="label">Place ID</label>
     <input id="pid-input" class="input" type="text" placeholder="Enter place_id" />
